--- a/core/css/css-variables.scss
+++ b/core/css/css-variables.scss
@@ -18,15 +18,21 @@
 	--color-placeholder-dark: #{$color-placeholder-dark};
 
 	--color-primary: #{$color-primary};
+	--color-primary-hover: #{$color-primary-hover};
 	--color-primary-light: #{$color-primary-light};
+	--color-primary-light-hover: #{$color-primary-light-hover};
 	--color-primary-text: #{$color-primary-text};
 	--color-primary-text-dark: #{$color-primary-text-dark};
 	--color-primary-element: #{$color-primary-element};
 	--color-primary-element-light: #{$color-primary-element-light};
 
 	--color-error: #{$color-error};
+	--color-error-hover: #{$color-error-hover};
 	--color-warning: #{$color-warning};
+	--color-warning-hover: #{$color-warning-hover};
 	--color-success: #{$color-success};
+	--color-success-hover: #{$color-success-hover};
+
 
 	--color-text-maxcontrast: #{$color-text-maxcontrast};
 	--color-text-light: #{$color-main-text};
